# stamp

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  LICENSE  PROOFGOAL-SPEC.md  README.md  STAMP-SPEC.md  package-lock.json  package.json  tsconfig.json
apps/web/: index.html  vite.config.ts
apps/web/src/: api.ts  app.tsx  main.tsx  receipt-canvas.tsx  stamp-client.ts  stamp-state.ts  styles.css  types.ts  wallet.tsx
assets/concepts/: DESKTOP-PROMPTS.md
deployments/: devnet-settlement-proof.json  devnet-spain-argentina-proof.json  devnet.json
docs/: API.md  ARCHITECTURE.md  DEVNET-RUNBOOK.md  FRONTEND-CONTRACT.md  PRE-UI-COMPLETION-AUDIT.md  RECEIPT_RENDERING.md  REPLAY-PAPER-MODE.md  SECURITY.md  TXLINE-FEEDBACK.md
programs/mock_txline/: Cargo.toml
programs/mock_txline/src/: lib.rs
programs/stamp/: Cargo.toml
programs/stamp/src/: constants.rs  error.rs  lib.rs  oracle.rs  state.rs
scripts/: dev.ts  devnet-faucet.ts  seed-devnet-pool.ts  smoke-devnet.ts  test-local.sh  verify-real-txline.ts
services/api/src/: config.ts  fixtures.ts  main.ts  server.ts
services/keeper/src/: config.ts  daemon-core.ts  daemon.ts  finalization-record.ts  finalize.ts  keypair.ts  runtime.ts  settle.ts  settlement.ts
services/shared/src/: anchor.ts  config.ts  keypair.ts  live-pool-timing.ts  pool.ts
services/wallet/src/: claim-prize.ts  claim.ts
tests/: api.test.ts  claim-prize.test.ts  finalization-record.test.ts  keeper-daemon.test.ts  live-pool-timing.test.ts  pdas.test.ts  replay.test.ts  sse.test.ts  stamp-client.test.ts  stamp.ts  txline-proof.test.ts
