[package]
name = "stamp"
version = "0.1.0"
description = "STAMP match-fingerprint pool and TxLINE settlement program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stamp"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
mainnet = []
mock-oracle = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", default-features = false, features = ["token", "token_2022"] }
